Bug 1323320 - Skip displayport size assertions when getting the displayport for visibility testing. r=tnikkel

MozReview-Commit-ID: 1GbXxlqdOzq