layout/base/nsLayoutUtils.cpp
@@ -1263,8 +1263,18 @@ nsLayoutUtils::IsMissingDisplayPortBaseRect(nsIContent* aContent)
   return false;
 }
 
+enum class MaxSizeExceededBehaviour {
+  // Ask GetDisplayPortImpl to assert if the calculated displayport exceeds
+  // the maximum allowed size.
+  eAssert,
+  // Ask GetDisplayPortImpl to pretend like there's no displayport at all, if
+  // the calculated displayport exceeds the maximum allowed size.
+  eDrop,
+};
+
 static bool
-GetDisplayPortImpl(nsIContent* aContent, nsRect* aResult, float aMultiplier)
+GetDisplayPortImpl(nsIContent* aContent, nsRect* aResult, float aMultiplier,
+                   MaxSizeExceededBehaviour aBehaviour = MaxSizeExceededBehaviour::eAssert)
 {
   DisplayPortPropertyData* rectData = nullptr;
   DisplayPortMarginsPropertyData* marginsData = nullptr;
@@ -1291,12 +1301,18 @@ GetDisplayPortImpl(nsIContent* aContent, nsRect* aResult, float aMultiplier)
   }
 
   if (!gfxPrefs::LayersTilesEnabled()) {
-    // Either we should have gotten a valid rect directly from the displayport
-    // base, or we should have computed a valid rect from the margins.
-    NS_ASSERTION(result.width <= GetMaxDisplayPortSize(aContent, nullptr),
-                 "Displayport must be a valid texture size");
-    NS_ASSERTION(result.height <= GetMaxDisplayPortSize(aContent, nullptr),
-                 "Displayport must be a valid texture size");
+    // Perform the desired error handling if the displayport dimensions
+    // exceeds the maximum allowed size
+    nscoord maxSize = GetMaxDisplayPortSize(aContent, nullptr);
+    if (result.width > maxSize || result.height > maxSize) {
+      switch (aBehaviour) {
+      case MaxSizeExceededBehaviour::eAssert:
+        NS_ASSERTION(false, "Displayport must be a valid texture size");
+        break;
+      case MaxSizeExceededBehaviour::eDrop:
+        return false;
+      }
+    }
   }
 
   *aResult = result;
@@ -1339,7 +1355,13 @@ nsLayoutUtils::GetDisplayPortForVisibilityTesting(
   RelativeTo aRelativeTo /* = RelativeTo::ScrollPort */)
 {
   MOZ_ASSERT(aResult);
-  bool usingDisplayPort = GetDisplayPortImpl(aContent, aResult, 1.0f);
+  // Since the base rect might not have been updated very recently, it's
+  // possible to end up with an extra-large displayport at this point, if the
+  // zoom level is changed by a lot. Instead of using the default behaviour of
+  // asserting, we can just ignore the displayport if that happens, as this
+  // call site is best-effort.
+  bool usingDisplayPort = GetDisplayPortImpl(aContent, aResult, 1.0f,
+      MaxSizeExceededBehaviour::eDrop);
   if (usingDisplayPort && aRelativeTo == RelativeTo::ScrollFrame) {
     TranslateFromScrollPortToScrollFrame(aContent, aResult);
   }
